--- a/src/main/resources/views/login.fxml
+++ b/src/main/resources/views/login.fxml
@@ -1,15 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.diti.ebank.controllers.LoginController"
-            prefHeight="400.0" prefWidth="600.0">
-
-
+<AnchorPane prefHeight="490.0" prefWidth="646.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.diti.ebank.controllers.LoginController">
+   <children>
+      <AnchorPane layoutY="5.0" prefHeight="479.0" prefWidth="323.0">
+         <children>
+            <ImageView fitHeight="293.0" fitWidth="299.0" layoutX="33.0" layoutY="93.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/profil.jpg" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <Text layoutX="375.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CONNEXION" wrappingWidth="215.73675537109375">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Text>
+      <Text layoutX="337.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="337.0" layoutY="252.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <TextField fx:id="usernameTfd" layoutX="342.0" layoutY="188.0" prefHeight="26.0" prefWidth="271.0" />
+      <PasswordField fx:id="passwordTfd" layoutX="342.0" layoutY="277.0" prefHeight="26.0" prefWidth="271.0" />
+      <Button fx:id="connexionBtn" layoutX="419.0" layoutY="351.0" mnemonicParsing="false" onAction="#getLogin" prefHeight="40.0" prefWidth="140.0" text="Se connecter">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
