--- a/src/main/resources/views/account.fxml
+++ b/src/main/resources/views/account.fxml
@@ -6,23 +6,21 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.diti.ebank.controllers.OperationController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: #212;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.diti.ebank.controllers.OperationController">
    <children>
       <Text layoutX="186.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mon Compte">
          <font>
             <Font name="Arial Bold" size="30.0" />
          </font>
       </Text>
-      <TextField fx:id="montantTfd" layoutX="48.0" layoutY="187.0" prefHeight="26.0" prefWidth="253.0" promptText="Saisir le montant ici..." />
+      <TextField fx:id="idTfd" layoutX="45.0" layoutY="109.0" prefHeight="26.0" prefWidth="194.0" promptText="Saisir le compte ici..." />
+      <TextField fx:id="montantTfd" layoutX="45.0" layoutY="186.0" prefHeight="26.0" prefWidth="194.0" promptText="Saisir le montant ici..." />
       <Button layoutX="48.0" layoutY="250.0" mnemonicParsing="false" onAction="#depotBtn" prefHeight="26.0" prefWidth="82.0" text="DEPOSIT" />
       <Button layoutX="175.0" layoutY="250.0" mnemonicParsing="false" onAction="#retraitBtn" prefHeight="26.0" prefWidth="82.0" text="WITHDRAWAL" />
       <Button layoutX="455.0" layoutY="273.0" mnemonicParsing="false" onAction="#transferBtn" prefHeight="26.0" prefWidth="82.0" text="TRANSFER" />
-      <TextField fx:id="compteTfd" layoutX="48.0" layoutY="89.0" prefHeight="26.0" prefWidth="254.0" promptText="Saisir le compte ici..." />
-      <TextField fx:id="CompteDebiteurTfd" layoutX="354.0" layoutY="89.0" promptText="Compte debiteur" />
-      <TextField fx:id="CompteCrediteurTfd" layoutX="354.0" layoutY="136.0" promptText="Compte crediteur" />
-      <TextField fx:id="MontantTransferTfd" layoutX="354.0" layoutY="187.0" promptText="Montant" />
-      <TextField fx:id="idTfd" layoutX="47.0" layoutY="136.0" prefHeight="26.0" prefWidth="254.0" promptText="Saisir le compte ici..." />
-      <TextField fx:id="idCDTfd" layoutX="516.0" layoutY="89.0" prefHeight="26.0" prefWidth="82.0" promptText="idCompte..." />
-      <TextField fx:id="idCCTfd" layoutX="516.0" layoutY="136.0" prefHeight="26.0" prefWidth="82.0" promptText="idCompte..." />
+      <TextField fx:id="idCDTfd" layoutX="368.0" layoutY="96.0" prefHeight="26.0" prefWidth="125.0" promptText="idCompte..." />
+      <TextField fx:id="idCCTfd" layoutX="368.0" layoutY="151.0" prefHeight="26.0" prefWidth="126.0" promptText="idCompte..." />
+      <TextField fx:id="MontantTransferTfd" layoutX="368.0" layoutY="212.0" promptText="Montant" />
+      <Button layoutX="48.0" layoutY="45.0" mnemonicParsing="false" onAction="#retourBtn" text="RETOUR" />
    </children>
 </AnchorPane>
