--- a/src/main/resources/views/create-account.fxml
+++ b/src/main/resources/views/create-account.fxml
@@ -17,19 +17,19 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Text>
-            <Text layoutX="69.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="username">
+            <Text layoutX="35.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="username">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <Text layoutX="417.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="balance">
+            <Text layoutX="317.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="balance">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <TextField fx:id="searchBar" layoutX="69.0" layoutY="108.0" prefHeight="26.0" prefWidth="322.0" promptText="rechercher un username ici..." />
-            <TextField fx:id="balanceTfd" layoutX="412.0" layoutY="108.0" prefHeight="26.0" prefWidth="193.0" promptText="Solde par defaut" />
-            <Button fx:id="Creerbtn" layoutX="467.0" layoutY="305.0" mnemonicParsing="false" onAction="#CreerCompte" prefHeight="30.0" prefWidth="87.0" text="Creer">
+            <TextField fx:id="searchBar" layoutX="35.0" layoutY="108.0" prefHeight="26.0" prefWidth="259.0" promptText="rechercher un username ici..." />
+            <TextField fx:id="balanceTfd" layoutX="317.0" layoutY="108.0" prefHeight="26.0" prefWidth="193.0" promptText="Solde par defaut" />
+            <Button fx:id="Creerbtn" layoutX="519.0" layoutY="106.0" mnemonicParsing="false" onAction="#CreerCompte" prefHeight="30.0" prefWidth="87.0" text="Creer">
                <font>
                   <Font size="14.0" />
                </font>
@@ -39,6 +39,11 @@
                 <TableColumn fx:id="usernameCol" prefWidth="299.19998931884766" text="username" />
               </columns>
             </TableView>
+            <Button layoutX="468.0" layoutY="305.0" mnemonicParsing="false" onAction="#AjouterClient" prefHeight="30.0" prefWidth="102.0" text="Ajouter client">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </children>
