--- a/src/main/resources/views/login.fxml
+++ b/src/main/resources/views/login.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -42,5 +43,6 @@
             <Font size="18.0" />
          </font>
       </Button>
+      <Hyperlink layoutX="441.0" layoutY="400.0" onAction="#creercompte" text="Creer un compte" />
    </children>
 </AnchorPane>
